--- a/package.json
+++ b/package.json
@@ -9,5 +9,5 @@
   },
   "repository": "git@github.com:bigslycat/chatfuel.git",
   "author": "Pavel Tereschenko <me@stupidcat.wtf>",
-  "license": "INLICENSED"
+  "license": "UNLICENSED"
 }
