Add dev dependencies

--- a/package.json
+++ b/package.json
@@ -6,6 +6,26 @@
   "dependencies": {
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.37",
+    "@babel/preset-env": "^7.0.0-beta.37",
+    "@babel/preset-flow": "^7.0.0-beta.37",
+    "@babel/preset-react": "^7.0.0-beta.37",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-ramda": "^1.4.3",
+    "clean-webpack-plugin": "^0.1.17",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "flow-bin": "^0.63.1",
+    "flow-typed": "^2.2.3",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.10.0",
+    "webpack-blocks": "^1.0.0-rc.2",
+    "webpack-dev-server": "^3.0.0-alpha6"
   },
   "repository": "git@github.com:bigslycat/chatfuel.git",
   "author": "Pavel Tereschenko <me@stupidcat.wtf>",
