--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "description": "Test task for Chatfuel",
   "dependencies": {
+    "material-ui": "^1.0.0-beta.29",
+    "ramda": "^0.25.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "recompose": "^0.26.0",
+    "rxjs": "^5.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.37",
