--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-ramda": "^1.4.3",
     "clean-webpack-plugin": "^0.1.17",
+    "cross-env": "^5.1.3",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.41.0",
