--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "recompose": "^0.26.0",
-    "rxjs": "^5.5.6"
+    "rxjs": "^5.5.6",
+    "styled-jss": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.37",
