--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "description": "Test task for Chatfuel",
+  "engines": {
+    "node": ">=8.0.0",
+    "yarn": "1.3.2"
+  },
   "scripts": {
     "lint": "eslint .",
     "flow": "flow",
